# QM40_dataset_for_ML

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: docs-build.yml  docs.yml  installation.yml  ubuntu.yml
Lmod_run/: Lmod_run.md  index.html
QM40data_search/: index.html
Tutorials/: QM40_data_access.ipynb
changelog/: index.html
common/: common.md  index.html
contributing/: contributing.md  index.html
docs/: Lmod_run.md  QM40data_search.md  gaussian_info_extractor.md  index.md  usage.md  utils.md
docs/examples/: QM40_data_access.ipynb
examples/intro/: index.html
faq/: index.html
gaussian_info_extractor/: index.html
installation/: index.html  installation.md
qm40_dataset_for_ml/: Lmod_run.py  QM40data_search.py  __init__.py  gaussian_info_extractor.py  index.html  qm40_dataset_for_ml.md  utils.py
search/: search_index.json
tests/: __init__.py  smile_pdb_check.csv  test_gaussian_lmod.py  test_qm40_dataset_for_ml.py  test_qm40_utils.py
usage/: index.html
utils/: index.html  utils.md
